@@ -1,3 +1,9 @@
+2003-06-20  Bruno Haible  <bruno@clisp.org>
+
+	Assume C89, so PARAMS isn't needed.
+	* unicodeio.h (PARAMS): Remove.
+	* unicodeio.c: Don't use PARAMS.
+
 2003-06-18  Jim Meyering  <jim@meyering.net>
 
 	Merge changes from coreutils.
